<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">My Store</string>
    <string name="Car_Rental_Center">Center Rental Cars</string>
    <string name="login">Login</string>
    <string name="addCar">Add Car</string>
    <string name="editCar">Edit Car</string>
    <string name="company_name">Company\'s name</string>
    <string name="model">Model</string>
    <string name="are_you_a_new_car">Are a new car?</string>
    <string name="yes">Yes</string>
    <string name="add">Add</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="id">Plate Number</string>
    <string name="userName">User Name</string>
    <string name="password">Password</string>
    <string name="regester">Regester</string>
</resources>
