<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.mastinoz.mystore.AddCar">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/id"
        android:id="@+id/textViewId"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/idEditText"
        android:inputType="text"
        android:layout_below="@+id/textViewId"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/company_name"
        android:id="@+id/textViewCompany"
        android:layout_below="@+id/idEditText"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/nameEditText"
        android:layout_below="@+id/textViewCompany"
        android:layout_centerHorizontal="true"
        android:inputType="text" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/model"
        android:id="@+id/textViewVersion"
        android:layout_below="@+id/nameEditText"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/modelEditText"
        android:layout_below="@+id/textViewVersion"
        android:layout_centerHorizontal="true"
        android:inputType="number" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/are_you_a_new_car"
        android:id="@+id/textView4"
        android:layout_below="@+id/modelEditText"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/yes"
        android:id="@+id/isNewCheckBox"
        android:checked="false"
        android:layout_below="@+id/textView4"
        android:layout_alignRight="@+id/linearLayout"
        android:layout_alignStart="@+id/linearLayout" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/isNewCheckBox"
        android:layout_centerHorizontal="true"
        android:weightSum="2"
        android:id="@+id/linearLayout">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update"
            android:id="@+id/updateButton"
            android:layout_weight="1"
            android:background="@color/green"
            android:textColor="#fff" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete"
            android:id="@+id/deleteButton"
            android:layout_weight="1"
            android:textColor="#fff"
            android:background="@color/red" />
    </LinearLayout>

</RelativeLayout>
